--- a/index.css
+++ b/index.css
@@ -1,120 +1,116 @@
-@media only screen  and (min-width : 1224px){
-    h1 {
-    position: relative;
-    color: red;
-    text-align: center;
-    font-family:Arial;
-    font-style: oblique;
-    font-size: 40px;
-    top: 25%;
-    }
-#p1 
-{
-    position: relative;
-    color:white;
-    top: 26%;
-    width: 100%;
-    text-align: center;
-    font-size: 18px;
-    
+
+body {
+	background: #120514;
+	font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+	font-size: 11px;
+	text-align: justify;
+	color: #888888;
 }
-#p2 
-{
-    position: relative;
-    color:white;
-    top: 27%;
-    left: 10px;
-    width: 100%;
-    text-align: center;
-    font-size: 18px;
-}
-body
-{
-        background-color: black;
-        font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
- }
-.rickroll 
-{
-    background-color: black;
-    position: relative;
-    color:white;
-    top: 29%;
-    left:40%;
-    width: 10%;
-    border: 1px solid rgb(212, 0, 255);
-    font-size: 18px;
-}
-#about 
-{
-    position: absolute;
-    bottom:2%;;
-    left:2%;
-    color:rgb(255, 0, 191);
-    width: 100%;
-    font-size: 18px;
-}
-}
-@media screen and (max-width: 960px){
 
 
-    body
-    {
-            background-color: black;
-            font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-     }
-     h1 {
-        position: absolute;
-        color: red;
-        text-align: center;
-        top: 2%;
-        left: 16%;
-        }
-        #p1 
-        {
-            position: absolute;
-            color:white;
-            top: 15%;
-            left: 5%;
-            width: 100%;
-            text-align: center;
-            font-size: 18px;
-            
-        }
-        #p2 
-{
-            position: absolute;
-            color:white;
-            top: 25%;
-            left: 3%;
-            width: 100%;
-            text-align: center;
-            font-size: 18px;
+a {
+	color: #ABABAB;
 }
-.rickroll 
-{
-    background-color: black;
-    color:white;
-    border: 1px solid rgb(212, 0, 255);
-    font-size: 18px;
-    position: absolute;
-    top: 40%;
-}
-#id2
-{
-    left: 60%;
-}
-#id1
-{
-    left: 30%;
-}
-#about 
-{
-    position: absolute;
-    bottom:2%;;
-    left:2%;
-    color:rgb(255, 0, 191);
-    width: 100%;
-    font-size: 18px;
-}
+
+
+.more {
+	animation: fadein 0.5s steps(1, end);
+	position:absolute; left:480px; top:130px;
+	color: 888888;
+	font-size: 15px;
+  }
   
+  @keyframes fadein {
+	  from { opacity: 0; }
+	  to   { opacity: 1; }
+  }
+
+
+@import url('https://fonts.googleapis.com/css?family=Open+Sans&display=swap');
+nav{
+	position: relative; left:20px; top:130px;
+	margin: 170px auto 0;
+	width: 210px;
+	height: 50px;
+	background: #34495e;
+	border-radius: 8px;
+	font-size: 0;
+	box-shadow: 0 2px 3px 0 rgba(0,0,0,.1);
+}
+nav a{
+	font-size: 15px;
+	text-transform: uppercase;
+	color: white;
+	text-decoration: none;
+	line-height: 50px;
+	position: relative;
+	z-index: 1;
+	display: inline-block;
+	text-align: center;
+}
+nav .animation{
+	position: absolute;
+	height: 100%;
+	/* height: 5px; */
+	top: 0;
+	/* bottom: 0; */
+	z-index: 0;
+	background: #a91abc;
+	border-radius: 8px;
+	transition: all .5s ease 0s;
+}
+nav a:nth-child(1){
+	width: 100px;
+}
+nav .start-home, a:nth-child(1):hover~.animation{
+	width: 100px;
+	left: 0;
+}
+nav a:nth-child(2){
+	width: 110px;
+}
+nav a:nth-child(2):hover~.animation{
+	width: 110px;
+	left: 100px;
+}
+	
+.static-txt {
+	color: #3cff00;
+	font-size: 16px;
+	padding-top: 100px;
+	width: 775px;
+	height: 60px;
+	margin: 0px auto;
+	text-align: center;
+	position:absolute; left:140px; top:0px;
+	
+}
+
+
+
+
+
+
+.typewriter h1 {
+	overflow: hidden; /* Ensures the content is not revealed until the animation */
+	border-right: .10em solid rgb(0, 250, 0); /* The typwriter cursor */
+	white-space: nowrap; /* Keeps the content on a single line */
+	margin: 0 auto; /* Gives that scrolling effect as the typing happens */
+	letter-spacing: .10em; /* Adjust as needed */
+	position:absolute; left:590px; top:95px;
+	animation: 
+	  typing 5.5s steps(60, end),
+	  blink-caret .75s step-end infinite;
+  }
+  
+  /* The typing effect */
+  @keyframes typing {
+	from { width: 0 }
+	to { width: 100% }
+  }
+  
+  /* The typewriter cursor effect */
+  @keyframes blink-caret {
+	from, to { border-color: transparent }
+	50% { border-color: rgb(9, 255, 0); width: 90px; }
   }
